# dd-gear-academy

./: .gitignore  Cargo.toml
.github/workflows/: release-rs.yml
dd-lib/: Cargo.toml
escrow/: Cargo.toml  build.rs
escrow/escrow-io/: Cargo.toml
escrow/escrow-io/src/: lib.rs
escrow/escrow-state/: Cargo.toml
escrow/escrow-state/src/: lib.rs
escrow/src/: contract.rs  lib.rs
escrow/tests/: escrow_test.rs
hello/: Cargo.toml
hello/src/: main.rs
tamagotchi/: Cargo.toml
tamagotchi/io/: Cargo.toml
tamagotchi/io/src/: contract.rs  lib.rs
tamagotchi/src/: lib.rs  tamagotchi.rs  tx_manager.rs
tamagotchi/tests/: tamagotchi.rs
